fixes: tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,8 @@
 set -g mode-mouse on
 set -g set-titles on
+set-window-option -g automatic-rename on
 set -g set-titles-string "#T"
+
+set -g default-terminal screen-256color
+
+set -g history-limit 10000 
